# ml-production-celery

./: .gitignore  README.md  docker-compose.yaml
client/: Dockerfile  client.py  config.py  requirements.txt  utils.py
server/: Dockerfile  pyproject.toml
server/app/: app.py
server/app/celery/: celery_app.py  tasks.py
server/app/config/: __init__.py
server/app/integrations/: genai_generator.py  generation_interface.py
server/app/models/: schemas.py
server/app/operators/: stable_diffusion.py
server/app/services/: generation_service.py
server/app/utils/: images.py
